# maestria

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  maestria_brioche_informed_code_architecture_report.md  pr1_diff.patch  pr2_diff.patch  pr3_diff.patch  rust-toolchain.toml  rustfmt.toml
crates/apps/maestria-cli/: Cargo.toml
crates/apps/maestria-cli/src/: cli_types.rs  helpers.rs  main.rs
crates/apps/maestria-cli/tests/: approval_workflow.rs  daemon_api.rs  daemon_query.rs  durable_workflow.rs  release_contract.rs  workflow_regressions.rs
crates/apps/maestria-daemon/: Cargo.toml
crates/apps/maestria-daemon/src/: api.rs  approval_recovery.rs  approval_recovery_tests.rs  full_text_recovery.rs  lib.rs  lifecycle.rs  lock.rs  main.rs  parser_resume.rs  parser_resume_tests.rs  projection_recovery.rs  projection_recovery_tests.rs  recovery_input_tests.rs  recovery_inputs.rs  recovery_scope_tests.rs  repository_code_loader.rs  runtime_supervision_tests.rs  search_executor.rs  search_executor_projection.rs  search_executor_tests.rs  search_runtime_construction.rs  supervision_recovery.rs  validation_recovery.rs  vector_startup.rs  watcher.rs
crates/apps/maestria-daemon/tests/: vertical_slice.rs
crates/core/maestria-core/: Cargo.toml
crates/core/maestria-core/src/: error.rs  evidence_opening.rs  evidence_pack.rs  evidence_pack_lifecycle.rs  evidence_pack_operations.rs  evidence_pack_provenance.rs  generation_gate.rs  graph_retrieval.rs  hierarchy_expansion.rs  ingestion.rs  instance.rs  lane_fusion.rs  lexical_helpers.rs  lib.rs  manifest.rs  manifest_codec.rs  manifest_codec_visual.rs  manifest_scope.rs  ports.rs  provenance.rs  rank_fusion.rs  recovery.rs  retrieval.rs  retrieval_lanes.rs  retrieval_pipeline.rs  retrieval_verification.rs  trace_candidates.rs  types.rs
crates/core/maestria-core/tests/: durable.rs  evidence_pack.rs  golden_gate.rs  hierarchy.rs  hybrid_shadow.rs  ingestion.rs  instance.rs  retrieval.rs
crates/ecosystem/maestria-code-intel/: Cargo.toml
crates/ecosystem/maestria-code-intel/src/: builder.rs  context.rs  context_assembly.rs  context_support.rs  error.rs  freshness.rs  identity.rs  lib.rs  metadata.rs  query.rs  types.rs
crates/ecosystem/maestria-code-intel/tests/: context_tests.rs  freshness_tests.rs  lib_tests.rs
crates/ecosystem/maestria-embedding-openai/: Cargo.toml
crates/ecosystem/maestria-embedding-openai/src/: lib.rs  tests.rs
crates/ecosystem/maestria-embedding-openai/tests/: local_http.rs
crates/ecosystem/maestria-memory/: Cargo.toml
crates/ecosystem/maestria-memory/src/: lib.rs
crates/ecosystem/maestria-ocr-local/: Cargo.toml
crates/ecosystem/maestria-ocr-local/src/: lib.rs  rasterizer.rs  transport.rs
crates/ecosystem/maestria-parsers/: Cargo.toml
crates/ecosystem/maestria-parsers/src/: cargo_toml.rs  chunking.rs  lib.rs  markdown.rs  pdf.rs  pdf_geometry.rs  pdf_layout.rs  plain_text.rs  registry.rs  rust_source.rs  tree_builder.rs
crates/ecosystem/maestria-parsers/tests/: contract_tests.rs  golden.rs
crates/ecosystem/maestria-retrieval/: Cargo.toml
crates/ecosystem/maestria-retrieval/src/: benchmark_metrics.rs  bounded_reranker.rs  diversity.rs  engine.rs  engine_adaptive.rs  engine_capabilities.rs  engine_evaluation.rs  engine_pipeline.rs  engine_pipeline_namespace_tests.rs  engine_tests.rs  engine_trace.rs  fusion.rs  golden.rs  golden_comparison.rs  golden_comparison_regressions.rs  golden_gate_eval.rs  golden_metrics.rs  learned_sparse_benchmark.rs  learned_sparse_benchmark_metrics.rs  learned_sparse_policy.rs  learned_sparse_shadow.rs  learned_sparse_shadow_validation.rs  lib.rs  planner.rs  repository_benchmark.rs  repository_benchmark_comparison.rs  repository_benchmark_runner.rs  rewrite.rs  sync.rs  sync_engine.rs  traits.rs  types.rs  visual_benchmark.rs  visual_benchmark_corpus.rs  visual_benchmark_metrics.rs  visual_benchmark_runner.rs  visual_reranker.rs  visual_reranker_order.rs  visual_reranker_tests.rs
crates/ecosystem/maestria-retrieval/tests/: adaptive_contract_tests.rs  contract_tests.rs  diversity_tests.rs  golden_fixture.rs  golden_gate.rs  learned_sparse_benchmark.rs  learned_sparse_generation.rs  learned_sparse_retriever.rs  learned_sparse_shadow.rs  repository_benchmark_tests.rs  rewrite_tests.rs  visual_benchmark_tests.rs
crates/ecosystem/maestria-visual-local/: Cargo.toml
crates/ecosystem/maestria-visual-local/src/: lib.rs  tests.rs
crates/ecosystem/maestria-web-evidence/: Cargo.toml
crates/ecosystem/maestria-web-evidence/src/: lib.rs  main.rs  tests.rs
crates/harness/maestria-harness/: Cargo.toml
crates/harness/maestria-harness-cli/: Cargo.toml
crates/harness/maestria-harness-cli/src/: main.rs
crates/harness/maestria-harness/src/: command.rs  lib.rs  process.rs  test_helpers.rs  tests.rs  tests_cancellation.rs  tests_capabilities.rs  tests_contract.rs  tests_filename_pattern.rs  tests_nonzero_exit.rs  tests_rejected_grammar.rs  tests_rejected_path.rs  tests_success.rs  tests_timeout.rs  tokenize.rs
crates/kernel/maestria-ports/: Cargo.toml
crates/kernel/maestria-ports/src/: contract_tests.rs  full_text.rs  graph_contract_tests.rs  in_memory.rs  learned_sparse.rs  learned_sparse_contract_tests.rs  lexical.rs  lib.rs  ocr.rs  parsing.rs  tests.rs  traits.rs  visual.rs
crates/runtime/maestria-runtime/: Cargo.toml
crates/runtime/maestria-runtime/src/: approval.rs  completion.rs  config.rs  effect_dispatch.rs  effect_execution.rs  effect_result.rs  harness.rs  indexing.rs  lib.rs  parser_mapping.rs  parsing.rs  parsing_records.rs  persistence.rs  runtime_barrier_tests.rs  runtime_blob_tests.rs  runtime_card_index_tests.rs  runtime_evidence_tests.rs  runtime_graph_tests.rs  runtime_harness_tests.rs  runtime_parse_tests.rs  runtime_pdf_tests.rs  runtime_resume_tests.rs  runtime_supervision_tests.rs  supervision.rs  (+7 more)
crates/storage/maestria-blob-fs/: Cargo.toml
crates/storage/maestria-graph-sqlite/: Cargo.toml
crates/storage/maestria-search-tantivy/: Cargo.toml
crates/storage/maestria-storage-sqlite/: Cargo.toml
(+411 files in other folders)
