[package]
name = "maestria"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Maestria local-first scaffold"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/apps/maestria-daemon",
    "crates/apps/maestria-cli",
    "crates/core/maestria-core",
    "crates/ecosystem/maestria-memory",
    "crates/ecosystem/maestria-parsers",
    "crates/ecosystem/maestria-validation",
    "crates/harness/maestria-harness",
    "crates/harness/maestria-harness-cli",
    "crates/kernel/maestria-domain",
    "crates/kernel/maestria-governance",
    "crates/kernel/maestria-ports",
    "crates/runtime/maestria-runtime",
    "crates/storage/maestria-blob-fs",
    "crates/storage/maestria-search-tantivy",
    "crates/storage/maestria-storage-sqlite",
    "crates/storage/maestria-vector-sqlite",
    "crates/storage/maestria-graph-sqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

