[package]
name = "maestria"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Maestria local-first scaffold"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/apps/maestria-daemon",
    "crates/apps/maestria-cli",
    "crates/core/maestria-core",
    "crates/ecosystem/maestria-memory",
    "crates/ecosystem/maestria-parsers",
    "crates/ecosystem/maestria-validation",
    "crates/ecosystem/maestria-web-evidence",
    "crates/harness/maestria-harness",
    "crates/harness/maestria-harness-cli",
    "crates/kernel/maestria-domain",
    "crates/kernel/maestria-governance",
    "crates/kernel/maestria-ports",
    "crates/runtime/maestria-runtime",
    "crates/storage/maestria-blob-fs",
    "crates/storage/maestria-search-tantivy",
    "crates/storage/maestria-storage-sqlite",
    "crates/storage/maestria-vector-sqlite",
    "crates/storage/maestria-graph-sqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"


[dev-dependencies]
maestria-core = { path = "crates/core/maestria-core" }
maestria-storage-sqlite = { path = "crates/storage/maestria-storage-sqlite" }
maestria-blob-fs = { path = "crates/storage/maestria-blob-fs" }
maestria-search-tantivy = { path = "crates/storage/maestria-search-tantivy" }
maestria-parsers = { path = "crates/ecosystem/maestria-parsers" }
maestria-domain = { path = "crates/kernel/maestria-domain" }
maestria-ports = { path = "crates/kernel/maestria-ports" }
tempfile = "3"
