[package]
name = "maestria"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Maestria local-first, source-grounded second-brain runtime"
publish = false

[workspace]
resolver = "2"
members = [
     "crates/apps/maestria-daemon",
     "crates/apps/maestria-cli",
     "crates/core/maestria-core",
     "crates/ecosystem/maestria-memory",
     "crates/ecosystem/maestria-code-intel",
     "crates/ecosystem/maestria-parsers",
     "crates/ecosystem/maestria-validation",
     "crates/ecosystem/maestria-web-evidence",
     "crates/harness/maestria-harness",
     "crates/ecosystem/maestria-retrieval",
     "crates/harness/maestria-harness-cli",
     "crates/kernel/maestria-domain",
     "crates/kernel/maestria-governance",
     "crates/kernel/maestria-ports",
     "crates/runtime/maestria-runtime",
     "crates/storage/maestria-blob-fs",
     "crates/storage/maestria-search-tantivy",
     "crates/storage/maestria-storage-sqlite",
     "crates/storage/maestria-vector-sqlite",
     "crates/storage/maestria-graph-sqlite",
     "crates/ecosystem/maestria-ocr-local",
     "crates/ecosystem/maestria-embedding-openai",
 ]

[workspace.package]
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"


