[package]
name = "maestria-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
maestria-blob-fs = { path = "../../storage/maestria-blob-fs" }
maestria-storage-sqlite = { path = "../../storage/maestria-storage-sqlite" }
maestria-search-tantivy = { path = "../../storage/maestria-search-tantivy" }
maestria-parsers = { path = "../../ecosystem/maestria-parsers" }
maestria-ports = { path = "../../kernel/maestria-ports" }
maestria-runtime = { path = "../../runtime/maestria-runtime" }

tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio-util = "0.7.18"
