[package]
name = "maestria-cli"
version = "0.6.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
maestria-core = { path = "../../core/maestria-core" }
maestria-daemon = { path = "../maestria-daemon" }
maestria-governance = { path = "../../kernel/maestria-governance" }
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-blob-fs = { path = "../../storage/maestria-blob-fs" }
maestria-storage-sqlite = { path = "../../storage/maestria-storage-sqlite" }
maestria-search-tantivy = { path = "../../storage/maestria-search-tantivy" }
maestria-ports = { path = "../../kernel/maestria-ports" }
maestria-parsers = { path = "../../ecosystem/maestria-parsers" }

tokio = { version = "1.37", features = ["full"] }
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4.28"

