[package]
name = "maestria-daemon"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
maestria-core = { path = "../../core/maestria-core" }
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
maestria-runtime = { path = "../../runtime/maestria-runtime" }
maestria-blob-fs = { path = "../../storage/maestria-blob-fs" }
maestria-search-tantivy = { path = "../../storage/maestria-search-tantivy" }
maestria-storage-sqlite = { path = "../../storage/maestria-storage-sqlite" }
maestria-vector-sqlite = { path = "../../storage/maestria-vector-sqlite" }
maestria-graph-sqlite = { path = "../../storage/maestria-graph-sqlite" }
maestria-web-evidence = { path = "../../ecosystem/maestria-web-evidence" }
maestria-parsers = { path = "../../ecosystem/maestria-parsers" }
maestria-ports = { path = "../../kernel/maestria-ports" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1"
tracing-subscriber = "0.3"
