[package]
name = "maestria-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
maestria-core = { path = "../../core/maestria-core" }
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
maestria-runtime = { path = "../../runtime/maestria-runtime" }
maestria-blob-fs = { path = "../../storage/maestria-blob-fs" }
maestria-search-tantivy = { path = "../../storage/maestria-search-tantivy" }
maestria-storage-sqlite = { path = "../../storage/maestria-storage-sqlite" }
maestria-vector-sqlite = { path = "../../storage/maestria-vector-sqlite" }
maestria-graph-sqlite = { path = "../../storage/maestria-graph-sqlite" }
maestria-web-evidence = { path = "../../ecosystem/maestria-web-evidence" }
maestria-embedding-openai = { path = "../../ecosystem/maestria-embedding-openai" }
maestria-parsers = { path = "../../ecosystem/maestria-parsers" }
maestria-harness = { path = "../../harness/maestria-harness" }
maestria-ports = { path = "../../kernel/maestria-ports" }
maestria-retrieval = { path = "../../ecosystem/maestria-retrieval" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1"
tracing-subscriber = "0.3"
