[package]
name = "maestria-core"
version = "0.6.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
maestria-ports = { path = "../../kernel/maestria-ports" }
maestria-retrieval = { path = "../../ecosystem/maestria-retrieval" }
url = "2"
sha2 = "0.10"
[dev-dependencies]
maestria-blob-fs = { path = "../../storage/maestria-blob-fs" }
maestria-search-tantivy = { path = "../../storage/maestria-search-tantivy" }
maestria-parsers = { path = "../../ecosystem/maestria-parsers" }
maestria-storage-sqlite = { path = "../../storage/maestria-storage-sqlite" }
tempfile = "3"
