[package]
name = "maestria-code-intel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

description = "Repository code intelligence index for workspace metadata and Rust symbols"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
regex = "1"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile = "3"
