[package]
name = "maestria-embedding-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
maestria-ports = { path = "../../kernel/maestria-ports" }
ureq = { version = "2", features = ["json"] }
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

