[package]
name = "maestria-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
