[package]
name = "maestria-ocr-local"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
maestria-ports = { path = "../../kernel/maestria-ports" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }
url = "2"
