[package]
name = "maestria-parsers"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lopdf = "0.42"
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-ports = { path = "../../kernel/maestria-ports" }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
maestria-ports = { path = "../../kernel/maestria-ports", features = ["contract-tests"] }
