[package]
name = "maestria-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
maestria-ports = { path = "../../kernel/maestria-ports" }
async-trait = "0.1.80"
thiserror = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["time", "macros", "rt"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full", "test-util"] }
