[package]
name = "maestria-visual-local"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-ports = { path = "../../kernel/maestria-ports" }
ureq = { version = "2", features = ["json"] }
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
