[package]
name = "maestria-harness-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
tokio = { version = "1.37", features = ["full"] }
maestria-harness = { path = "../maestria-harness" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
maestria-ports = { version = "0.1.0", path = "../../kernel/maestria-ports" }
tracing-subscriber = "0.3"
