[package]
name = "maestria-harness-cli"
version = "0.6.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
tokio = { version = "1.37", features = ["full"] }
maestria-harness = { path = "../maestria-harness" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
maestria-ports = { version = "0.6.0", path = "../../kernel/maestria-ports" }
tracing-subscriber = "0.3"
