[package]
name = "maestria-harness-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
tokio = { version = "1.37", features = ["full"] }
maestria-harness = { path = "../maestria-harness" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
maestria-ports = { path = "../../kernel/maestria-ports" }
tracing-subscriber = "0.3"
