[package]
name = "maestria-harness"
version = "0.6.1"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
maestria-ports = { version = "0.6.1", path = "../../kernel/maestria-ports" }
tokio = { version = "1.37", features = ["process", "time", "io-util", "rt", "macros"] }

[dev-dependencies]
tempfile = "3"
