[package]
name = "maestria-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
maestria-ports = { path = "../../kernel/maestria-ports" }
tokio = { version = "1.37", features = ["process", "time", "io-util", "rt", "macros"] }

tracing = "0.1"
tempfile = "3"
