[package]
name = "maestria-ports"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
contract-tests = []

[dependencies]
maestria_domain = { package = "maestria-domain", path = "../maestria-domain" }

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "macros"] }
