[package]
name = "maestria-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
maestria-ports = { path = "../../kernel/maestria-ports" }

tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tokio-util = { version = "0.7.18", features = ["rt"] }

[dev-dependencies]
tokio-test = "0.4"
