[package]
name = "maestria-runtime"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-governance = { path = "../../kernel/maestria-governance" }
maestria-memory = { path = "../../ecosystem/maestria-memory" }
maestria-ports = { path = "../../kernel/maestria-ports" }
maestria-validation = { path = "../../ecosystem/maestria-validation" }

tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tokio-util = { version = "0.7.18", features = ["rt"] }

[dev-dependencies]
tokio-test = "0.4"
