[package]
name = "maestria-blob-fs"
edition = "2024"
license.workspace = true
version = "0.1.0"

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-ports = { path = "../../kernel/maestria-ports" }
sha2 = "0.10"

[dev-dependencies]
maestria-ports = { path = "../../kernel/maestria-ports", features = ["contract-tests"] }
tempfile = "3"
