[package]
name = "maestria-blob-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
maestria-domain = { path = "../../kernel/maestria-domain" }
maestria-ports = { path = "../../kernel/maestria-ports" }
sha2 = "0.10"

[dev-dependencies]
maestria-ports = { path = "../../kernel/maestria-ports", features = ["contract-tests"] }
tempfile = "3"
