[package]
name = "maestria-search-tantivy"
edition = "2024"
license.workspace = true
version = "0.1.0"

[dependencies]
maestria_domain = { package = "maestria-domain", path = "../../kernel/maestria-domain" }
maestria_ports = { package = "maestria-ports", path = "../../kernel/maestria-ports" }
tantivy = "0.22"

[dev-dependencies]
tempfile = "3"
