[package]
name = "maestria-storage-sqlite"
edition = "2021"
version = "0.1.0"

[dependencies]
maestria_domain = { package = "maestria-domain", path = "../../kernel/maestria-domain" }
maestria_ports = { package = "maestria-ports", path = "../../kernel/maestria-ports" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
maestria_ports = { package = "maestria-ports", path = "../../kernel/maestria-ports", features = ["contract-tests"] }
tempfile = "3"
